--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,10 @@ S3method(plot,umapscan)
 S3method(print,umapscan)
 export(compute_clusters)
 export(describe_clusters)
+export(explor_umapscan)
 export(get_cluster)
 export(label_cluster)
 export(new_umapscan)
 import(ggplot2)
+import(shiny)
 importFrom(dbscan,dbscan)
