--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,13 @@ S3method(print,umapscan)
 export(compute_clusters)
 export(describe_clusters)
 export(explor_umapscan)
-export(get_cluster)
-export(label_cluster)
+export(get_cluster_data)
+export(get_clusters_membership)
 export(new_umapscan)
+export(plot_clusters)
+export(remove_cluster)
+export(rename_cluster)
+export(umapscan_tree)
 import(ggplot2)
 import(shiny)
 importFrom(dbscan,dbscan)
