--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,16 @@
 
 S3method(plot,umapscan)
 S3method(print,umapscan)
+export(collapse_clusters)
 export(compute_clusters)
 export(describe_clusters)
 export(explor_umapscan)
 export(get_cluster_data)
 export(get_clusters_membership)
+export(map_plot)
 export(new_umapscan)
 export(plot_clusters)
+export(reinit_clusters)
 export(remove_cluster)
 export(rename_cluster)
 export(umapscan_tree)
