--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,26 @@ export(plot_clusters)
 export(reinit_clusters)
 export(remove_cluster)
 export(rename_cluster)
-export(umapscan_tree)
+import(dplyr)
 import(ggplot2)
+import(leaflet)
 import(shiny)
+importFrom(collapsibleTree,collapsibleTree)
+importFrom(collapsibleTree,collapsibleTreeOutput)
+importFrom(collapsibleTree,renderCollapsibleTree)
+importFrom(data.tree,as.Node)
 importFrom(dbscan,dbscan)
+importFrom(dbscan,hdbscan)
+importFrom(dplyr,bind_rows)
+importFrom(ggridges,geom_density_ridges)
+importFrom(ggsci,scale_color_d3)
+importFrom(ggsci,scale_fill_d3)
+importFrom(graphics,plot)
+importFrom(purrr,map)
+importFrom(purrr,pwalk)
+importFrom(rlang,sym)
+importFrom(shiny,HTML)
+importFrom(tibble,tibble)
+importFrom(tidyr,drop_na)
+importFrom(tidyr,pivot_longer)
+importFrom(uwot,umap)
