--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 # Sample .travis.yml for R projects
-
-language: r
-warnings_are_errors: true
-sudo: false
-cache: package
-r:
-  - oldrel
-  - release
-  - devel
+#
+# language: r
+# warnings_are_errors: true
+# sudo: false
+# cache: package
+# r:
+#   - oldrel
+#   - release
+#   - devel
