--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 VignetteBuilder: knitr
-URL: https://github.com/juba/umapscan
+URL: https://juba.github.io/umapscan/
 BugReports: https://github.com/juba/umapscan/issues
 Imports:
   uwot,
