--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -20,7 +20,7 @@ jobs:
         config:
         - { os: windows-latest, r: 'release'}
         - { os: macOS-latest, r: 'release'}
-        - { os: linux, r: 'devel'}
+        - { os: ubuntu, r: 'devel'}
         - { os: ubuntu-18.04, r: 'release'}
 
     env:
