Export remove_cluster

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(map_plot)
 export(new_umapscan)
 export(plot_clusters)
 export(reinit_clusters)
+export(remove_cluster)
 export(rename_cluster)
 import(dplyr)
 import(ggplot2)
