--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,8 @@ LazyData: true
 VignetteBuilder: knitr
 URL: https://juba.github.io/umapscan/
 BugReports: https://github.com/juba/umapscan/issues
+Depends:
+  R (>= 3.5.0)
 Imports:
   uwot,
   dbscan,
