--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -20,7 +20,7 @@ jobs:
         config:
         - { os: macOS-latest, r: 'release'}
         - { os: windows-latest, r: 'devel'}
-        - { os: ubuntu-16.04, r: 'release', cran: 'https://demo.rstudiopm.com/all/__linux__/xenial/latest'}
+        - { os: ubuntu-18.04, r: 'release'}
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
