--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,6 +35,8 @@ Suggests:
   knitr,
   testthat,
   rmarkdown,
-  vdiffr
+  vdiffr,
+  quanteda,
+  gridExtra
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
