--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(describe_clusters)
 export(explor_umapscan)
 export(get_cluster_data)
 export(get_clusters_membership)
+export(keyness_stats)
 export(map_plot)
 export(new_umapscan)
 export(plot_clusters)
