--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(explor_umapscan)
 export(get_cluster_data)
 export(get_clusters_membership)
 export(keyness_stats)
+export(label_cluster)
 export(map_plot)
 export(new_umapscan)
 export(plot_clusters)
