--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,20 +2,20 @@
 
 S3method(plot,umapscan)
 S3method(print,umapscan)
-export(collapse_clusters)
-export(compute_clusters)
-export(describe_clusters)
-export(explor_umapscan)
-export(get_cluster_data)
-export(get_clusters_membership)
+export(clust_collapse)
+export(clust_compute)
+export(clust_describe)
+export(clust_get_data)
+export(clust_label)
+export(clust_members)
+export(clust_plot)
+export(clust_reinit)
+export(clust_remove)
+export(clust_rename)
 export(keyness_stats)
-export(label_cluster)
 export(map_plot)
 export(new_umapscan)
-export(plot_clusters)
-export(reinit_clusters)
-export(remove_cluster)
-export(rename_cluster)
+export(umapscan_explor)
 import(dplyr)
 import(ggplot2)
 import(leaflet)
@@ -33,6 +33,8 @@ importFrom(ggsci,scale_fill_d3)
 importFrom(graphics,plot)
 importFrom(purrr,map)
 importFrom(purrr,pwalk)
+importFrom(rlang,.data)
+importFrom(rlang,.env)
 importFrom(rlang,sym)
 importFrom(shiny,HTML)
 importFrom(tibble,tibble)
