Rename clust_members -> clust_membership

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(clust_compute)
 export(clust_describe)
 export(clust_get_data)
 export(clust_label)
-export(clust_members)
+export(clust_membership)
 export(clust_plot)
 export(clust_reinit)
 export(clust_remove)
